<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".place.AddTodoDialogFragment">

    <!-- 상단 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- 닫기 버튼 -->
        <ImageButton
            android:id="@+id/closeBtn"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/btn_close"/>

        <!-- 할 일 -->
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/nanumsquareroundb"
            android:gravity="center"
            android:text="할 일"
            android:textSize="20sp" />

        <!-- 체크 버튼 -->
        <ImageButton
            android:id="@+id/submitBtn"
            android:layout_width="0dp"
            android:layout_height="37dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/btn_check"/>
    </LinearLayout>

    <!-- 하단 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp"
        android:orientation="vertical"
        android:padding="20dp">

        <!-- 해야 할 일 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareroundr"
            android:text="해야 할 일"
            android:textColor="@color/gray3"
            android:textSize="13sp"/>

        <!-- 기억해야 할 일을 적어주세요 -->
        <EditText
            android:id="@+id/todoname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="true"
            android:maxHeight="84dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/textstyle3"
            android:fontFamily="@font/nanumsquareroundb"
            android:inputType="textMultiLine"
            android:padding="15dp"
            android:hint="기억해야 할 일을 적어주세요"
            android:textColor="@android:color/black"
            android:textSize="15sp" />

        <!-- 알림 설정 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/nanumsquareroundr"
            android:text="알림 설정"
            android:textColor="@color/gray3"
            android:textSize="13sp" />

        <!-- 나갈 때 / 들어올 때 토글 버튼 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp"
            android:padding="0dp">

            <ToggleButton
                android:id="@+id/inToggleButton"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textOn="들어갈 때"
                android:textOff="들어갈 때"
                android:textColor="#FFE7E7"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.Button.Borderless"

                android:fontFamily="@font/nanumsquareroundb"
                android:drawableStart="@drawable/check_resize"
                android:background="@drawable/toggle_off" />

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                />

            <ToggleButton
                android:id="@+id/outToggleBtn"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="40dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:textOn="나갈 때"
                android:textOff="나갈 때"
                android:textColor="#FFE7E7"
                android:textSize="15sp"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:fontFamily="@font/nanumsquareroundb"
                android:drawableStart="@drawable/check_resize"
                android:background="@drawable/toggle_off" />


        </LinearLayout>



        <!-- 시간 설정 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nanumsquareroundr"
                android:text="반복 요일 설정"
                android:textColor="@color/gray3"
                android:textSize="13sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Switch
                android:id="@+id/repeatSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:track="@drawable/switch_onoff"
                android:thumb="@drawable/switch_thumb"
                android:switchMinWidth="0dp"
                android:textOff=""
                android:textOn=""
                android:thumbTextPadding="15dp" />

        </LinearLayout>



        <!-- 요일 -->
        <LinearLayout
            android:id="@+id/repeatLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            android:animateLayoutChanges="true">


            <ToggleButton
                android:id="@+id/sun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/sun"
                android:textOff="@string/sun"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"
                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/mon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/mon"
                android:textOff="@string/mon"
                android:background="@color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"
                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/tue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/tue"
                android:textOff="@string/tue"
                android:background="@android:color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"

                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/wed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/wed"
                android:textOff="@string/wed"
                android:background="@android:color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"

                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/thu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/thu"
                android:textOff="@string/thu"
                android:background="@android:color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"

                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/fri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/fri"
                android:textOff="@string/fri"
                android:background="@android:color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"

                android:textSize="15sp" />

            <ToggleButton
                android:id="@+id/sat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textOn="@string/sat"
                android:textOff="@string/sat"

                android:background="@android:color/white"
                android:gravity="center"
                android:textColor="@drawable/repeat_onoff"
                android:fontFamily="@font/nanumsquareroundb"
                android:stateListAnimator="@null"

                android:textSize="15sp" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>